finishing touches, fixing firefox display bug where menu was overflowing

--- a/css/about.css
+++ b/css/about.css
@@ -15,8 +15,7 @@
   margin-bottom: 0px;
 }
 
-#bush {
-  display: block;
-  width: 100%;
-  margin: auto;
+#about-lowertext {
+  margin-top: -10px;
+  margin-bottom: 30px;
 }
