--- a/css/menu.css
+++ b/css/menu.css
@@ -1,5 +1,5 @@
 nav {
-	width: 810px;
+	width: 850px;
   margin: auto;
   padding-top: 15px;
   padding-bottom: 15px;
