--- a/css/styles.css
+++ b/css/styles.css
@@ -116,3 +116,7 @@ img.divider {
 	margin: auto;
 	margin-bottom: 20px;
 }
+
+.center-text {
+	text-align: center;
+}
